add nullchar function

--- a/jquery/advShuffleLetters/sample.html
+++ b/jquery/advShuffleLetters/sample.html
@@ -19,5 +19,6 @@
 <div onclick="$(this).advShuffleLetters({'charpat':'s'})">charpat:symbol</div>
 <div onclick="$(this).advShuffleLetters({'charpool':'hoge'})">charpool:"hoge"</div>
 <div onclick="$(this).advShuffleLetters({'charpool':'0123456789ABCDEF'})">charpool:"0123456789ABCDEF"</div>
+<div style="font-family: monospace;font-size: 1.5em" onclick="$(this).advShuffleLetters({'direction':'random','nullchar':'-'})">direction:random,nullchar:minus</div>
 </body>
 </html>
